--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.username=postgres
+spring.datasource.password=simoQB24188
+spring.datasource.url=jdbc:postgresql://localhost:5432/mapper_database
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.datasource.initialization-mode=always
