creating the different app layers - Services-DAO-controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.username=postgres
-spring.datasource.password=simoQB24188
-spring.datasource.url=jdbc:postgresql://localhost:5432/mapper_database
-spring.datasource.driver-class-name=org.postgresql.Driver
+ # spring.datasource.username=postgres
+ # spring.datasource.password=simoQB24188
+ # spring.datasource.url=jdbc:postgresql://localhost:5432/mapper_database
+ # spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.initialization-mode=always
+
+spring.h2.console.enabled=true
